--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section id="bio">
         <h2>About Me</h2>
         <p>Mahasiswa Aktif di Universitas Islam Kalimantan Arsyad Al Banjari</p>
+        <p>Suami Kafuu Chino</p>
     </section>
     <section id="work">
         <h2>My Work</h2>
