--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>M. IBNU</title>
+    <link rel="icon" type="image/x-icon" href="component/images/pp_ibnu.jpg">
     <link rel="stylesheet" type="text/css" href="component/styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
