--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
     <footer>
         <p>Contact me at</p>
-        <p>E-mail: muhammadibnu45911@gmail.com | Number: 0887435037759</p>
+        <p>E-mail: kafuuchino2@gmail.com | Number: +62 XXX XXXXXXXX</p>
     </footer>
 </body>
 </html>
