--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>M. IBNU</title>
-    <link rel="icon" type="image/x-icon" href="component/images/pp_ibnu.jpg">
+    <link rel="icon" type="image/x-icon" href="component/images/akatsuki.png">
     <link rel="stylesheet" type="text/css" href="component/styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="component/images/pp_ibnu.jpg">
+        <img src="component/images/mibnu_pp.gif">
         <h1>M. IBNU</h1>
         <p>Prodi S1 Teknik Informatika</p>
     </header>
